Add role name on user profile
