# src/web/swagger.json
@@ -632,6 +632,10 @@
                                         },
                                         "auth_key": {
                                             "type": "string"
+                                        },
+                                        "role": {
+                                            "type": "string",
+                                            "example": "admin, patient, doctor"
                                         }
                                     },
                                     "type": "object"
